// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $34,234.24
  </h1>
</div>
`;

exports[`should render ExpenseSummary with single expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
